<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/comment"
        android:icon="@drawable/ic_reply" android:title="@string/timeline_cmt"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/repost"
        android:icon="@drawable/ic_retweet" android:title="@string/timeline_repost"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_star" android:title="@string/timeline_fav"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/fav_destory" android:title="@string/timeline_fav_destory"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/weiguan" android:title="@string/timeline_weiguan" app:showAsAction="never"
        />
    <item
        android:id="@+id/copy" android:title="@string/timeline_copy" app:showAsAction="never"
        />
    <item
        android:id="@+id/delete" android:title="@string/menu_delete" app:showAsAction="never"
        />
</menu>