<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/savePicture"  android:title="@string/save_pic" app:showAsAction="always"/>

    <item
        android:id="@+id/origPicture" android:title="@string/orig_pic" app:showAsAction="always"/>

    <item
        android:id="@+id/share" android:icon="@android:drawable/ic_menu_share" android:title="@string/share" app:actionProviderClass="android.support.v7.widget.ShareActionProvider" app:showAsAction="never"/>

    <item
        android:id="@+id/copy" app:showAsAction="never" android:title="@string/copy_url"/>

    <item
        android:id="@+id/downloadAgain" app:showAsAction="never" android:title="@string/download_again"/>

</menu>
