<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/browser">
        <item
            android:id="@+id/refresh" android:icon="@drawable/ic_refresh_light" android:title="@string/refresh" app:showAsAction="always"/>
        <item
            android:id="@+id/copy" android:title="@string/copy" app:showAsAction="never"/>
        <item
            android:id="@+id/share" android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share" app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/to_browser" android:title="@string/to_browser"
            app:showAsAction="never"/>
    </group>
</menu>
