<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawTimelines" android:icon="@drawable/ic_view_day_grey600_24dp"
            android:title="@string/menu_sinaweibo" android:checked="true" />

        <item
            android:id="@+id/drawMention" android:icon="@drawable/ic_view_day_grey600_24dp"
            android:title="@string/menu_mention" android:checked="true" />

        <item
            android:id="@+id/drawCmts" android:icon="@drawable/ic_view_day_grey600_24dp"
            android:title="@string/menu_comments" android:checked="true" />

        <item
            android:id="@+id/drawDm" android:icon="@drawable/ic_view_day_grey600_24dp"
            android:title="@string/menu_dm" android:checked="true" />
    </group>

</menu>