<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/mainMenus" android:orderInCategory="100">
        <item
            android:id="@+id/publish" android:icon="@drawable/ic_menu_edit_white"
            android:orderInCategory="2"
            android:title="@string/publish" app:showAsAction="always"/>
        <item
            android:id="@+id/toggle_offline" android:orderInCategory="4"
            android:title="@string/toggle_offline"
            app:showAsAction="never"/>

        <item
            android:id="@+id/stop_offline" android:orderInCategory="4"
            android:title="@string/stop_offline"
            app:showAsAction="never"/>

        <item
            android:id="@+id/feedback" android:orderInCategory="10"
            android:title="@string/main_feedback"
            app:showAsAction="never"/>

        <item
            android:id="@+id/about" android:orderInCategory="11" android:title="@string/title_about"
            app:showAsAction="never"/>

        <item
            android:id="@+id/exitapp" android:orderInCategory="12" android:title="@string/exitapp"
            app:showAsAction="never"/>
    </group>

    <!--<group-->
    <!--android:id="@+id/mainMenus" android:orderInCategory="100">-->

    <!--<item-->
    <!--android:id="@+id/publish" android:icon="@drawable/ic_menu_edit_white" android:showAsAction="always"-->
    <!--android:title="@string/main_publish"/>-->


    <!--<item-->
    <!--android:id="@+id/help" android:showAsAction="never" android:title="@string/main_help"/>-->

    <!--<item-->
    <!--android:id="@+id/settings" android:showAsAction="never" android:title="@string/title_settings"/>-->
    <!--<item-->
    <!--android:id="@+id/colortheme" android:showAsAction="never" android:title="@string/title_actionbar"/>-->
    <!--<item-->
    <!--android:id="@+id/habit" android:showAsAction="never" android:title="@string/title_habit"/>-->
    <!--</group>-->


</menu>
