<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item android:id="@+id/send" android:title="@string/publish_send" android:icon="@drawable/ic_action_send_now"-->
    <!--android:showAsAction="always"/>-->
    <group android:id="@+id/publish">
        <item
            android:id="@+id/group_all_visiable" android:title="@string/group_all_visiable"
            app:showAsAction="never" android:orderInCategory="1" />
        <item
            android:id="@+id/publish_timing" android:title="@string/publish_timing"
            app:showAsAction="never" android:orderInCategory="3"/>
        <item
            android:id="@+id/cancel_timing" android:title="@string/cancel_timing"
            app:showAsAction="never" android:orderInCategory="4"/>
    </group>

</menu>
