<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layWeb"
        android:layout_width="match_parent" android:layout_height="match_parent" android:visibility="invisible">

        <WebView
            android:id="@+id/webview" android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_marginTop="10dip"/>

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
            android:id="@+id/progress" style="@style/GNowProgressBar" android:layout_width="match_parent"
            android:layout_height="10dip" android:indeterminate="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layInput"
        android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dip">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip">

            <EditText
                android:id="@+id/editAccount" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:hint="@string/account_username_hint" android:textColor="?android:attr/textColorPrimary" android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textinputAccount" android:layout_marginTop="8dip">

            <EditText
                android:id="@+id/editPassword" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:hint="@string/account_pwd_hint" android:inputType="textPassword"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:layout_below="@id/textinputPassword" android:layout_marginTop="16dip"
            android:lineSpacingExtra="4dip" android:text="@string/account_weico_remind"
            android:visibility="visible"/>

    </RelativeLayout>

</RelativeLayout>
